# tmux-ggg

./: .editorconfig  LICENSE.txt  README.md  pyproject.toml
src/tmux_ggg/: app.py  configurations.py  configured_paths.py  main.py  session_chooser.py  tmux.py
